--- a/style.css
+++ b/style.css
@@ -1,94 +1,190 @@
 *{
+/*Importing font*/
+@import url('https://fonts.googleapis.com/css2family=Merriweather:ital@1&family=Montserrat&family=Nanum+Gothic:wght@700&family=Noto+Sans+Armenian&display=swap');
+
+/*Specific CSS for Different Elements*/
+body, html {
+  height: 100vh;
+  overflow: auto;
+}
+
+* {
   color: f2f2f2;
   box-sizing: border-box;
   text-decoration: none;
-}
-div#nav {
-  position: sticky;
-  top: 0;
-  background-color: black;
-  padding: 10px 0px 10px 10px;
   margin: 0;
-  width: 100%;
 }
-div#nav ol {
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
-}
-div#nav li  {
-  width: 100px;
-  padding: 10px;
-  margin: 0px 1px;
-  display: inline-block;
-  text-align: center;
-  color: white;
-}
-div#nav li:hover {
-  background: white;
-}
-div#logo {
-  float: right;
-}
+
 h2 {
+  font-family: 'Merriweather', serif;
+  font-size: 30px;
   text-align: center;
   color: #8c1c1f;
 }
-.par{
+
+.par, p {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.par {
   padding: 10px 50px 20px;
-  text-align: center;
+  text-align: center; 
+  position: relative;
 }
-div.clearfix {
-  background-color: #a28a7f;
-  width: 500px;
-  padding: 10px 20px 10px 20px;
-  margin-right:auto;
-  margin-left: auto;
-  margin-bottom: 20px;
-  text-align: justify;
-  border: 2px solid black;
+
+/*CSS for Subtopics in the Homepage*/
+.column {
+  float: left;
+  width: 25%;
+  margin-bottom: 16px;
+  margin-top: 20px;
+  padding: 0 10px;
 }
-div.clearfix a:hover{
-  background: white;
-  color: black;
-}
-.clearfix {
-    overflow: auto;
-}
-.clearfix img{
-  margin-right: 10px;
-  margin-left: 10px;
-  display: block;
-  width: 50%;
-  float: right; 
-}
-}
-div.clearfix a{
-  color: #8c1c1f
-}
-div#nav-bottom {
-  position: fixed;
+
+.card img {
   width: 100%;
-  background-color: black;
-  left: 0;
-  bottom: 0;
-  color: white;
+  height: 12em;
+}
+
+.cardcontainer {
+  padding: 0 16px;
+}
+
+.cardcontainer::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: grey;
   text-align: center;
+  margin: 10px
 }
-div#nav-bottom ol {
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
-}
-div#nav-bottom li  {
-  width: 100px;
-  padding: 10px;
-  margin: 0px 1px;
+
+.button {
+  border: none;
+  outline: 0;
   display: inline-block;
-  text-align: center;
+  padding: 8px;
   color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 50px;
+  transition: all 0.3s ease 0s;
+  margin-top: 20px;
 }
-div#nav-bottom li:hover {
-  background: white;
-  color: black;
+
+.button:hover {
+  background-color: rgba(87, 0, 0, 0.7);
+}
+
+/*CSS for Marcos Regime Column*/
+.MRcolumn {
+  float: left;
+  width: 50%;
+  margin-top: 102px;
+  margin-bottom: 16px;
+  padding: 0 10px;
+  position: relative;
+}
+
+.MRcard img {
+  width: 100%;
+  height: 12em;
+}
+
+.MRcardcontainer {
+  padding: 0 16px;
+}
+
+.MRcardcontainer::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/*CSS for Martial Law and People Power Content*/
+.MRtextbox {
+  position: relative;
+}
+
+.MLnumbers {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+.marcosHeader {
+  text-align: center;
+  margin-top: 100px;
+  background-color: black;
+  border: 15px;
+  color: white;
+  font-size: 40px;
+  text-decoration: bold;
+  padding: 50px;
+}
+.marcosImage {
+  height: 250px;
+  width: 240px;
+  margin-left: 50px;
+  margin-top: 25px;
+  float: left;
+  border: 15px;
+  padding: 20px;
+}
+.marcosBiography {
+  display: flex;
+  padding-left: 50px;
+  margin: 20px;
+  border: 15px;
+  text-align: justify;
+}
+.ImeldaImage {
+  height: 250px;
+  width: 240px;
+  margin-left: 50px;
+  float: right;
+  border: 15px;
+  padding: 20px;
+}
+.ImeldaBiography{
+  display: flex;
+  padding: 25px;
+  margin: 20px;
+  border: 15px;
+  text-align: justify;
+}
+.bbmImage{
+  height: 250px;
+  width: 240px;
+  margin-left: 50px;
+  float: left;
+  border: 15px;
+  padding: 20px;
+}
+.bbmBiography{
+  display: flex;
+  padding-left: 50px;
+  margin: 20px;
+  border: 15px;
+  text-align: justify;;
+}
+.ImeeImage{
+  height: 250px;
+  width: 240px;
+  margin-left: 50px;
+  float: right;
+  border: 15px;
+  padding: 20px;
+}
+.ImeeBiography{
+  display: flex;
+  padding: 25px;
+  margin: 20px;
+  border: 15px;
+  text-align: justify;
 }
